<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home_fragment"/>
        <item
            android:id="@+id/nav_cat"
            android:icon="@drawable/ic_final_cat"
            android:title="@string/cat_pictures" />
        <item
            android:id="@+id/nav_dog"
            android:icon="@drawable/ic_final_dog"
            android:title="@string/dog_pictures" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/ext_fragment"/>

    </group>

</menu>
